--- a/package.json
+++ b/package.json
@@ -4,30 +4,33 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack/config.dev --mode development --hot",
-    "build": "rm -rf ./dist && webpack --config ./webpack/config.prod --mode production"
+    "start": "webpack-dev-server --config ./webpack/config.dev -d --hot",
+    "build": "rm -rf ./dist && webpack --config ./webpack/config.prod -p"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/leaflet": "^1.4.4",
-    "@types/react": "^16.8.14",
-    "@types/react-dom": "^16.8.4",
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.5.1",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.6.0",
-    "node-sass": "^4.11.0",
-    "sass-loader": "^7.1.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
-    "ts-loader": "^5.3.3",
-    "typescript": "^3.4.4",
+    "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1",
     "webpack-dev-server": "^3.3.1"
   },
   "dependencies": {
     "leaflet": "^1.4.0",
+    "normalize.css": "^8.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
