--- a/package.json
+++ b/package.json
@@ -1,24 +1,33 @@
 {
-  "name": "detector",
+  "name": "webpack-example",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config ./webpack/config.dev -d --hot",
-    "build": "rm -rf ./dist && webpack --config ./webpack/config.prod -p"
+    "build": "rm -rf ./dist && webpack --config ./webpack/config.prod -p",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --colors"
   },
-  "author": "",
+  "author": "kondratev.sp@gmail.com",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.5.1",
+    "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^2.1.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
+    "enzyme-to-json": "^3.3.5",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.7.1",
+    "jest-css-modules": "^2.0.0",
     "mini-css-extract-plugin": "^0.6.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
@@ -29,7 +38,6 @@
     "webpack-dev-server": "^3.3.1"
   },
   "dependencies": {
-    "leaflet": "^1.4.0",
     "normalize.css": "^8.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
